<resources>
    <string name="app_name">QuickEat</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="searchKeyword_text">OK</string>
    <string name="importantQuestion">What are you in the mood for?</string>
    <string-array name="choices">
            <item>American</item>
            <item>Chinese</item>
            <item>Italian</item>
            <item>Hawaiian</item>
            <item>Coffee</item>
            <item>Ice Cream</item>
            <item>Breakfast</item>
            <item>Japanese</item>
    </string-array>
    <string name="title_activity_list">ListActivity</string>
    <string name="title_activity_info">InfoActivity</string>
    <string name="title_activity_list_">List_Activity</string>
    <string name="RestaurantName">RestaurantName</string>
    <string name="Distance">Distance:</string>
    <string name="DistanceFromRestaurant">distance</string>
    <string name="Address">Address:</string>
    <string name="RestaurantAddress">address</string>
    <string name="Phone">Phone:</string>
    <string name="RestaurantPhone">phone</string>
    <string name="RestaurantOpenNow">Open Now:</string>
    <string name="RestaurantWebsite">website</string>
    <string name="ListWebsite">Website:</string>
    <string name="RestaurantNA">openorclosed</string>
</resources>
