<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="io.github.invainn.quickeat.InfoActivity"
    android:theme="@style/AppTheme"
    android:id="@+id/activity_info"
    android:background="#BB9955">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/poweredBy"
        android:src="@drawable/powered_by_google_dark"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/RestaurantName"
        android:id="@+id/restaurantName"
        android:layout_row="0"
        android:layout_column="0"
        android:paddingBottom="50dp"
        android:textColor="#FFFFFF"
        android:layout_marginTop="57dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Distance"
        android:id="@+id/textView3"
        android:layout_row="2"
        android:layout_column="0"
        android:paddingBottom="10sp"
        android:textColor="#FFFFFF"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/restaurantName"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/DistanceFromRestaurant"
        android:id="@+id/distanceFromRestaurant"
        android:layout_row="2"
        android:layout_column="3"
        android:textColor="#FFFFFF"
        android:paddingLeft="50dp"
        android:layout_below="@+id/restaurantName"
        android:layout_toEndOf="@+id/textView3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Phone"
        android:id="@+id/textView5"
        android:layout_row="3"
        android:layout_column="0"
        android:textColor="#FFFFFF"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/RestaurantPhone"
        android:id="@+id/restaurantPhone"
        android:layout_row="3"
        android:layout_column="3"
        android:textColor="#FFFFFF"
        android:paddingLeft="50dp"
        android:layout_alignTop="@+id/textView5"
        android:layout_toEndOf="@+id/textView3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Address"
        android:id="@+id/textView4"
        android:layout_row="4"
        android:layout_column="0"
        android:paddingBottom="10sp"
        android:textColor="#FFFFFF"
        android:paddingTop="10dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/restaurantPhone"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/RestaurantAddress"
        android:id="@+id/restaurantAddress"
        android:layout_row="4"
        android:layout_column="3"
        android:textColor="#FFFFFF"
        android:textSize="16dp"
        android:paddingLeft="50dp"
        android:paddingTop="10dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_alignTop="@+id/textView4"
        android:layout_alignStart="@+id/restaurantPhone" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/RestaurantOpenNow"
        android:id="@+id/textView7"
        android:layout_row="4"
        android:layout_column="0"
        android:paddingBottom="10sp"
        android:textColor="#FFFFFF"
        android:paddingTop="10dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/restaurantAddress" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/RestaurantNA"
        android:id="@+id/restaurantOpenNow"
        android:layout_row="4"
        android:layout_column="0"
        android:paddingBottom="10sp"
        android:textColor="#FFFFFF"
        android:paddingTop="10dp"
        android:layout_marginStart="38dp"
        android:layout_alignBaseline="@+id/textView7"
        android:layout_alignBottom="@+id/textView7"
        android:layout_toEndOf="@+id/textView7" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Call"
        android:id="@+id/callButton"
        android:layout_marginBottom="58dp"
        android:layout_above="@+id/poweredBy"
        android:layout_alignEnd="@+id/textView4" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Directions"
        android:id="@+id/directionsButton"
        android:layout_alignTop="@+id/callButton"
        android:layout_centerHorizontal="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Website"
        android:id="@+id/websiteButton"
        android:layout_alignTop="@+id/directionsButton"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
